--- a/main.html
+++ b/main.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anupam Trading 1</title>
+    <title>Anupam Trading</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Coming Soon!</h1>
+  </body>
 </html>
