--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://127.0.0.1:8080/style.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anupam Trading</title>
   </head>
   <body>
-    <h1>Coming Soon!</h1>
+    <h1 class="main-heading">Coming Soon!</h1>
   </body>
 </html>
